Moved service Message below menu

--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 <body>
 	<div class="wrapper">
 	
-    @Html.Action("ServiceMessages", "ServiceMessage")		
+    @*@Html.Action("ServiceMessages", "ServiceMessage")*@		
 	
 		<header id="branding">
 			
@@ -95,7 +95,6 @@
                 </ul>
                 </div>
 			</span>
-				
 		</header>
 
         <nav id="navigation-bar">
@@ -191,7 +190,7 @@
             </div>
 
         </nav>
-        
+        @Html.Action("ServiceMessages", "ServiceMessage")
 			
 		<div class="main @(ViewBag.SingleColumn == null || (bool)ViewBag.SingleColumn ? "single-column" : string.Empty)">
 			
