--- a/Purchasing.Web/Views/ServiceMessage/Index.cshtml
+++ b/Purchasing.Web/Views/ServiceMessage/Index.cshtml
@@ -11,7 +11,7 @@
 @section SubNav
 {
 	<ul class='navigation'>
-		<li>@Html.ActionLink("Create New", "Create")</li>
+		<li>@Html.ActionLink("Create New", "Create", new {}, new {@class="button"})</li>
 	</ul>
 }
 
