--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
                 }
                 
                 <li class="drop-down-menu">
-                    <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues" id="help-link">Help</a>
+                    <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues" id="help-link" target="_blank">Help</a>
                 </li>
             </ul>
             <div style="clear: both;"></div>
