help icon is better then info for order num tooltip

--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -2,7 +2,7 @@
 <section id="order-details" class="ui-corner-all display-form">
 
     <header class="ui-corner-top ui-widget-header">
-        <a href="#" class="ui-icon ui-icon-info" title="Order Request Number Is For Internal Use Only" style="float:left;" ></a>&nbsp;&nbsp;
+        <a href="#" class="ui-icon ui-icon-help" title="Order Request Number Is For Internal Use Only" style="float:left;" ></a>&nbsp;&nbsp;
         <span style="float:none">Request # @Model.Order.RequestNumber</span>
     </header>
 
