--- a/Purchasing.Web/Views/Wizard/ConditionalApprovals.cshtml
+++ b/Purchasing.Web/Views/Wizard/ConditionalApprovals.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Purchasing.Core.Domain.ConditionalApproval>
 
 @{
-    ViewBag.StepName = "Conditional Approval(s)";
+    ViewBag.StepName = "Confirm Conditional Approvals";
     ViewBag.Previous = Url.Action("Addresses", "Wizard", new { id = ViewBag.WorkgroupId });
     ViewBag.Next = Url.Action("Index", "Workgroup");
     ViewBag.ListPage = true;
