--- a/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
@@ -15,13 +15,13 @@
 {
 	@Html.AntiForgeryToken()
 	@Html.ValidationSummary(true)
-    @Html.Partial("_Navigation")
+    @Html.Partial("_Navigation") <a href="#" id="help-workgroup" class="ui-icon ui-icon-help showTip" style="margin-top: -78px; margin-left: 0px; margin-right: 97px;" title="<strong>Navigation bar</strong> - contains links for each step, though Create Workgroup must be completed first for subsequent steps to function properly. "></a>
     <section>
     
-        <header class="ui-corner-all ui-widget-header">Workgroup</header>
+        <header class="ui-corner-all ui-widget-header">Workgroup <a href="#" id="help-workgroup" class="ui-icon ui-icon-help showTip" title="This is the first step in creating new a new workgroup. You must complete this step before adding anything to the workgroup."></a></header>
 
         <div class="section-contents">
-            <div class="wizard-instructions" id="wizard-instructions-form">
+@*            <div class="wizard-instructions" id="wizard-instructions-form">
                 <p>This is the first step in creating new a new workgroup. </p>
     <p><strong>Disclaimer</strong> - is text that appears on the new order page. It should include information and or links regarding the department's purchasing policies.</p>
                 <p><strong>Administrative workgroups</strong> - can see other workgroups within the same primary organization.</p>
@@ -29,7 +29,7 @@
     <p><strong>Primary organization</strong> - is the department or unit that this workgroup belongs to.</p>
     <p><strong>Navigation bar</strong> - contains links for each step, though Create Workgroup must be completed first for subsequent steps to function properly. </p>
 
-            </div>
+            </div>*@
             <div class="section-text">
                 <p>All required fields are in <strong>bold</strong> and have a red <span class="required">*</span> next to the field label.</p>        
             </div>
@@ -49,7 +49,7 @@
                         @Html.LabelFor(model => model.Workgroup.Disclaimer)
                     </div>
                     <div class="editor-field">
-                        @Html.TextAreaFor(model => model.Workgroup.Disclaimer, new { @class = "text-box multi-line showTip wide600", title = "Disclaimer is text that appears on the new order page. It should include information and or links regarding the department's purchasing policies." })
+                        @Html.TextAreaFor(model => model.Workgroup.Disclaimer, new { @class = "text-box multi-line showTip wide600", title = "<strong>Disclaimer</strong> is text that appears on the new order page. It should include information and or links regarding the department's purchasing policies." })
                         @Html.ValidationMessageFor(model => model.Workgroup.Disclaimer)
                     </div>
                 </li>
@@ -67,7 +67,7 @@
                         @Html.LabelFor(model => model.Workgroup.SyncAccounts)
                     </div>
                     <div class="editor-field">
-                        <span class="showTip" title="Synchronize accounts from KFS for your organization instead of manually adding accounts.">@Html.EditorFor(model => model.Workgroup.SyncAccounts)</span>
+                        <span class="showTip" title="<strong>Synchronize Accounts</strong> from KFS for your organization instead of manually adding accounts.">@Html.EditorFor(model => model.Workgroup.SyncAccounts)</span>
                         @Html.ValidationMessageFor(model => model.Workgroup.SyncAccounts)
                     </div>
                 </li>
@@ -76,7 +76,7 @@
                         @Html.LabelFor(model => model.Workgroup.AllowControlledSubstances)
                     </div>
                     <div class="editor-field">
-                        <span class="showTip" title="Show controlled substances fields for workgroups that need to purchase controlled substances.">@Html.EditorFor(model => model.Workgroup.AllowControlledSubstances)</span>
+                        <span class="showTip" title="<strong>Show Controlled Substances Fields</strong> for workgroups that need to purchase controlled substances.">@Html.EditorFor(model => model.Workgroup.AllowControlledSubstances)</span>
                         @Html.ValidationMessageFor(model => model.Workgroup.AllowControlledSubstances)
                     </div>
                 </li>               
