--- a/Purchasing.Web/Views/Wizard/SubOrganizations.cshtml
+++ b/Purchasing.Web/Views/Wizard/SubOrganizations.cshtml
@@ -2,7 +2,7 @@
 
 @{
 	ViewBag.Title = Model.Name;
-	ViewBag.StepName = "Suborganizations";
+	ViewBag.StepName = "Confirm Suborganizations";
 	ViewBag.Previous = Url.Action("AddSubOrganizations", "Wizard", new { id = Model.Id });
 	ViewBag.Next = Url.Action("AddPeople", "Wizard", new {id = Model.Id, roleFilter ="RQ"});
 	ViewBag.ListPage = true;
@@ -13,9 +13,16 @@
 	@Html.Partial("_StatusBar", Model.Id) 
 	@Html.Partial("_Navigation")
     <nav class="col2">
-    <ul class='navigation'>
-		<li>@Html.ActionLink("Add more organizations", "AddSubOrganizations", new { Model.Id }, new { @class = "button" })</li>
-	</ul>
+        <ul class='navigation'>
+            <li>
+                <a href="#" id="help-organizations-page" class="ui-icon ui-icon-help showTip" style="margin-bottom: -6px;" title="
+        You can add any number of additional organizations to this workgroup. This provides
+        the ability for administrative workgroups from other organizations to view this
+        workgroup. You are limited to the organizations that have been added to your account.
+        Using the wizard, you can only add sub-organizations. </br>If you need to remove them, please use the the admin: workgroup page."></a>
+            </li>
+            <li>@Html.ActionLink("Add more organizations", "AddSubOrganizations", new { Model.Id }, new { @class = "button" })</li>
+        </ul>
     </nav>
 
 
