--- a/Purchasing.Web/Views/Wizard/_PeopleTable.cshtml
+++ b/Purchasing.Web/Views/Wizard/_PeopleTable.cshtml
@@ -8,19 +8,19 @@
             break;
         case 4:
             // On Approver
-            <p>Users who review and approve orders from requestors. Approvers must be added as requestors in order to submit orders. Approvers are typically the PI, supervsor of units, or their delegates.</p>
+            <p>Users who review and approve orders from requestors. Approvers must be added as requestors in order to submit orders. Approvers are typically the PI, supervisor of units, or their delegates.</p>
             break;
         case 5:
             //On Account Manager
-            <p>Users who review orders following approval step. Typically admin staff or shared service unit budget personell.</p>
+            <p>Users who review orders following approval step. Typically admin staff or shared service unit budget personnel.</p>
             break;
         case 6:
             //On Purchaser
-            <p>User who completes order and files order with vendor or campus purchasing. Typcally admin staff or shared service unit purchasing personell.</p>
+            <p>User who completes order and files order with vendor or campus purchasing. Typically admin staff or shared service unit purchasing personnel.</p>
             break;
     }
     <p>You must add at least one requestor, approver, account manager, and purchaser for the workgroup to be fully functional.</p>
-    <p>Use the "Prev" or "add another..." links to add aditional users for this category.</p> 
+    <p>Use the "Prev" or "add another..." links to add additional users for this category.</p> 
     <p>Using the wizard, you can only users. If you need to remove them, please use the the admin: workgroup page. </p>
     </div>     
 <table class='dt-table nofirsticon no_select'>
