--- a/Purchasing.Web/Views/Wizard/_SubOrganizations.cshtml
+++ b/Purchasing.Web/Views/Wizard/_SubOrganizations.cshtml
@@ -1,13 +1,13 @@
 ﻿@using Purchasing.Core.Domain
 @model IList<Organization>
-           
-           <div class="wizard-instructions" id="wizard-instructions-table">
+
+@*           <div class="wizard-instructions" id="wizard-instructions-table">
     <p>
         You can add any number of additional organizations to this workgroup. This provides
         the ability for administrative workgroups from other organizations to view this
         workgroup. You are limited to the organizations that have been added to your account.</p>
         <p>Using the wizard, you can only add sub-organizations. If you need to remove them, please use the the admin: workgroup page. </p>
-</div>
+</div>*@
 <table class='dt-table no-icon-table no_select'>
 	<thead>
 		<tr class="white_bkgnd">			
