--- a/Purchasing.Web/Views/Wizard/People.cshtml
+++ b/Purchasing.Web/Views/Wizard/People.cshtml
@@ -40,10 +40,42 @@
 
 	@Html.Partial("_StatusBar", Model.Workgroup.Id) 
 	@Html.Partial("_Navigation")
-    <nav class="col2">
-	<ul class='navigation'>
-		<li>@Html.ActionLink("Add another " + Model.Roles.Where(a => a.Id == ViewBag.rolefilter).FirstOrDefault().Name, "AddPeople", new { id = Model.Workgroup.Id, roleFilter = ViewBag.rolefilter }, new { @class = "button" })</li>        
-	</nav>
+    
+
+    @{
+        var helpText = "";
+        switch ((int)ViewBag.StepNumber)
+        {
+            case 3:
+                //On Requestor
+                helpText = "<strong>Requestors</strong> are users who can place orders. Typically lab members or general staff who may initiate orders.</br>";
+                break;
+            case 4:
+                // On Approver
+                helpText = "<strong>Approvers</strong> are users who review and approve orders from requestors. Approvers must be added as requestors in order to submit orders. Approvers are typically the PI, supervisor of units, or their delegates.</br>";
+                break;
+            case 5:
+                //On Account Manager
+                helpText = "<strong>Account Managers</strong> are users who review orders following approval step. Typically admin staff or shared service unit budget personnel.</br>";
+                break;
+            case 6:
+                //On Purchaser
+                helpText = "<strong>Purchasers</strong> are user who completes order and files order with vendor or campus purchasing. Typically admin staff or shared service unit purchasing personnel.</br>";
+                break;
+        }
+        helpText = helpText + "</br>You must add at least one requestor, approver, account manager, and purchaser for the workgroup to be fully functional.</br>" +
+                                "Use the \"Prev\" or \"add another...\" links to add additional users for this category.</br>" +
+                                "Using the wizard, you can only users. If you need to remove them, please use the the admin: workgroup page.";
+        }
+
+<nav class="col2">
+    <ul class='navigation'>
+        <li>
+            <a href="#" id="help-people-page" class="ui-icon ui-icon-help showTip" style="margin-bottom: -6px;" title="@helpText"></a>
+        </li>
+        <li>@Html.ActionLink("Add another " + Model.Roles.Where(a => a.Id == ViewBag.rolefilter).FirstOrDefault().Name, "AddPeople", new { id = Model.Workgroup.Id, roleFilter = ViewBag.rolefilter }, new { @class = "button" })</li>       
+    </ul>
+</nav>
 
 @section AdditionalScripts
 {
