--- a/Purchasing.Web/Views/Wizard/Vendors.cshtml
+++ b/Purchasing.Web/Views/Wizard/Vendors.cshtml
@@ -18,13 +18,25 @@
 	 @Html.Partial("_StatusBar", (int)ViewBag.WorkgroupId)
 	 @Html.Partial("_Navigation")
      <nav class="col2">
-	<ul class='navigation'>
-		<li>@Html.ActionLink("Select KFS Vendor", "AddKfsVendor", new { id = ViewBag.WorkgroupId }, new { @class="button" })</li>
-		<li>@Html.ActionLink("Add Vendor ", "addNewVendor", new { id = ViewBag.WorkgroupId }, new { @class = "button" })</li>
-	</ul>
+         <ul class='navigation'>
+             <li>
+                 <a href="#" id="help-kfsadd" class="ui-icon ui-icon-help showTip" style="margin-bottom: -6px;" title="
+                    Using the wizard, vendors can only be added. To edit or remove a vendor, use the admin: workgroup page.</br>
+                    To add existing KFS Vendors to this workgroup, choose the button Select KFS Vendor."></a>
+             </li>
+             <li>@Html.ActionLink("Select KFS Vendor", "AddKfsVendor", new { id = ViewBag.WorkgroupId }, new { @class="button" })</li>
+             <li>
+                 <a href="#" id="help-nonkfsadd" class="ui-icon ui-icon-help showTip" style="margin-bottom: -6px;" title="
+                    Using the wizard, vendors can only be added. To edit or remove a vendor, use the admin: workgroup page.</br>
+                    To add non KFS vendors to this workgroup, choose the button Add Vendor. </br>
+                    If a non-KFS Vendor is used for an order that goes through KFS, it will have to be added to that system."></a>
+             </li>
+             <li>@Html.ActionLink("Add Vendor ", "addNewVendor", new { id = ViewBag.WorkgroupId }, new { @class = "button" })</li>
+         </ul>
     </nav>
 
 
 @Html.Partial("_VendorTable", Model)
 
 @Html.Partial("_Navigation")
+   
