--- a/Purchasing.Web/Views/Wizard/AddNewVendor.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddNewVendor.cshtml
@@ -12,7 +12,11 @@
 
 
     @Html.Partial("_StatusBar", Model.WorkgroupVendor.Workgroup.Id)
-
+    
+    @{
+        var helpText = "To add a non KFS vendor enter the fields below.</br></br>" +
+            "<strong>If a non-KFS Vendor is used for an order that goes through KFS, it will have to be added to that system.</strong>";
+    }
 
 @using (Html.BeginForm())
 {
@@ -23,12 +27,9 @@
      @Html.Partial("_Navigation")
     <section class="ui-corner-all">
     
-        <header class="ui-corner-top ui-widget-header">New Vendor</header>
+        <header class="ui-corner-top ui-widget-header">New Vendor <a href="#" id="help-vendor-page" class="ui-icon ui-icon-help showTip" title="@helpText" ></a></header>
 
-        <div class="section-contents">
-            <div class="wizard-instructions" id="wizard-instructions-form">            
-                <p>To add a non KFS vendor enter the fields below.</p>                
-            </div>        
+        <div class="section-contents">    
             <div class="section-text">
                 <p>All required fields are in <strong>bold</strong> and have a red <span class="required">*</span> next to the field label.</p>
             </div>
