--- a/Purchasing.Web/Views/Wizard/Addresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/Addresses.cshtml
@@ -14,19 +14,17 @@
 	@Html.Partial("_StatusBar", Model.Workgroup.Id)
     @Html.Partial("_Navigation")
     <nav class="col2">
-    <ul class='navigation'>		
-        <li>@Html.ActionLink("Add More Addresses ", "AddAddresses", new { id = Model.Workgroup.Id }, new { @class = "button" })</li>
-	</ul>
+        <ul class='navigation'>
+            <li>
+                <a href="#" id="help-organizations-page" class="ui-icon ui-icon-help showTip" style="margin-bottom: -6px;" title="
+                You can add any number of additional shipping address to this workgroup. This provides
+                the ability to pick from a short list of shiiping address when creating an order.
+                Using the wizard, you can only add shipping address. If you need to remove them, please use the the admin: workgroup page."></a>
+            </li>		
+            <li>@Html.ActionLink("Add More Addresses ", "AddAddresses", new { id = Model.Workgroup.Id }, new { @class = "button" })</li>
+        </ul>
     </nav>
 
-
-
-<div class="wizard-instructions" id="wizard-instructions-table">
-    <p>
-        You can add any number of additional shipping address to this workgroup. This provides
-        the ability to pick from a short list of shiiping address when creating an order.</p>
-    <p>Using the wizard, you can only add shipping address. If you need to remove them, please use the the admin: workgroup page. </p>
-</div>
 <table class='dt-table no-icon-table'>
 	<thead>
 		<tr>
