--- a/Purchasing.Web/Views/Order/Index.cshtml
+++ b/Purchasing.Web/Views/Order/Index.cshtml
@@ -1,7 +1,12 @@
 ﻿@model FilteredOrderListModelDto
            
 @{
-    ViewBag.Title = "Orders";
+    var extra = "";
+    if(!string.IsNullOrWhiteSpace(Model.ShowLast))
+    {
+        extra = " completed this month";
+    }
+    ViewBag.Title = "Orders" + extra;
     ViewBag.DataTablesPageSize = 50;
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "Index";
@@ -17,9 +22,12 @@
 {
 	<ul class='navigation'>
         @*<li>@Html.ActionLink("Create New", "Create")</li>*@
-        <li>@*@Html.ActionLink("Filters", "filters", "", new { @class = "button" })*@
-            <a href="#" id="filterToggle" class="button selected">Filters</a>
-        </li>
+        @if(string.IsNullOrWhiteSpace(Model.ShowLast))
+        {
+            <li>@*@Html.ActionLink("Filters", "filters", "", new { @class = "button" })*@
+                <a href="#" id="filterToggle" class="button selected">Filters</a>
+            </li>
+        }
         <li>@Html.ActionLink("Update Column Preferences", "ColumnPreferences", "User", new { id = User.Identity.Name, fromList = true }, new { @class = "button" })</li>
 	</ul>
 }
