Added OrgId to org name for tables and multi selectors

--- a/Purchasing.Web/Views/Organization/Index.cshtml
+++ b/Purchasing.Web/Views/Organization/Index.cshtml
@@ -17,7 +17,7 @@
 				Name
 			</th>
 			<th>
-				TypeCode
+				Org Code
 			</th>
 			<th>
 				TypeName
@@ -41,7 +41,7 @@
                 @Html.ActionLink(item.Name, "Details", "Organization", new {id=item.Id}, new {})
             </td>
 			<td>
-				@item.TypeCode
+				@item.Id
 			</td>
 			<td>
 				@item.TypeName
