Dynamically set the label for the User to the role name as per Nora's request

--- a/Purchasing.Web/Views/Wizard/AddPeople.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddPeople.cshtml
@@ -168,7 +168,7 @@
                 <li>
                     <div class="selector editor-label" style="margin-top: 8px;">
                         
-                        <label style="font-weight: bold">Users(s):</label>
+                    <label style="font-weight: bold">@(string.Format("{0}(s):", Model.Role.Name))</label>
                         <a href="#" id="help-people" class="ui-icon ui-icon-help showTip" title="<strong>User(s) Selector</strong> Enter Kerberos ID or email of desired person, one at a time. After entry, click search button. If a valid user is found, the users name will appear below the text entry field. Click this name to add the user to the list. Repeat for each user you wish to add this way. Users in the list may be removed via the small x to the right of the name."></a>                    
                     </div>
                     <div class="editor-field">
