Fixes problem where inactive workgroups were not filtered.
Put in text for what to do when there is multiple workgroups to place an order under.

--- a/Purchasing.Web/Views/Order/SelectWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Order/SelectWorkgroup.cshtml
@@ -42,7 +42,7 @@ else
 
         
         <div class="section-text">
-            <p>_insert_text_here_</p>    
+            <p>You have access to multiple workgroups. Please choose the one you wish to submit this order under.</p>    
         </div>
 
         <ul>
