updated interface to the campus financial system.  Things look good and I believe final, just need to do some validation with users and we can accept the web service.

--- a/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
@@ -23,6 +23,7 @@
                         <li><span>PO Type: </span><strong id="kfs-potype"></strong></li>
                         <li><span>Received: </span><strong id="kfs-received"></strong></li>
                         <li><span>Fully Paid: </span><strong id="kfs-fullypaid"></strong></li>
+                        <li id="kfs-link-container"><span>Financial System Link: </span><strong id="kfs-link"></strong></li>
                     </ul>
                 </div>
                 <div id="kfs-loading" class="section-contents">
