--- a/Purchasing.Web/Views/Order/_ReviewApprovals.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewApprovals.cshtml
@@ -21,7 +21,7 @@
                     <tr class='@(approval.Completed ? "approval-complete" : "approval-incomplete")'>
                         <td>@approval.StatusCode.Name</td>
                         <td class="name">@approvalDisplayName</td>
-                        <td>@(approval.Completed ? "Accepted" : "Pending")</td>
+                        <td>@(approval.Completed ? "Approved" : "Pending")</td>
                         @if (Model.CanEditOrder)
                         {
                             <td>
