Changed the placeholders for url and account proj to work in IE

--- a/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
@@ -3,7 +3,7 @@
         <option data-bind="value: id, text: text, attr: { title: title }"></option>
     </select>
     <select data-bind="enable: subAccounts().length > 0, value: subAccount, splitName: 'SubAccount', options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
-    <input data-bind="value: project, splitName: 'Project'" type="text" placeholder="Project" class="account-projectcode" maxlength="4"/>
+    <input data-bind="value: project, splitName: 'Project'" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
     <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0.6em 0.1em 0; float: right;">
     <a href="#" class="search-account ui-icon ui-icon-search"></a></span>
 </div>
