--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -55,7 +55,7 @@
                                     <input data-bind="value: commodity, itemName: 'commodityCode'" type="text" placeholder="Commodity Code" class="search-commodity-code" />
                                 </td>
                                 <td class="label">URL:</td>
-                                <td><input data-bind="value: url, itemName: 'url'" class="url" placeholder="Item URL" title="Enter a Url like http://www.google.com" style="width: 395px;" /></td>
+                                <td><input data-bind="value: url, itemName: 'url'" class="url" placeholder="http://www.your-url.com" title="Enter a Url like http://www.google.com" style="width: 395px;" /></td>
                             </tr>
                             <tr>
                                 <td class="label">Notes:</td>
