--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -29,7 +29,7 @@
                                 <option data-bind="value: id, text: text, attr: { title: title }"></option>
                             </select>
                             <select data-bind="enable: subAccounts().length > 0, value: subAccount, options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
-                            <input data-bind="value: project" name="Project" type="text" placeholder="Project" class="account-projectcode" maxlength="4"/>
+                            <input data-bind="value: project" name="Project" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
                             <img src="@Url.Image("details.png")" class="search-account" style="cursor: pointer;" />
                         </div>
 					</div></span>
