--- a/Purchasing.Web/Views/Wizard/AddPeople.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddPeople.cshtml
@@ -14,7 +14,7 @@
         
             var userUrl = "@Url.Action("SearchUsers")";
             
-            $("#users").multiSelector({autoComplete: false, dataUrl: userUrl, placeholder: "KerberosID or email", showOptions: true});
+            $("#users").multiSelector({autoComplete: false, dataUrl: userUrl, placeholder: "Email, Kerb or Name", showOptions: true});
            
         })
 
