--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -52,7 +52,7 @@
                                             @foreach (var split in Model.Splits.Where(x=>x.LineItem == line))
                                             {  
                                                 <tr>
-                                                    <td>@(string.IsNullOrWhiteSpace(split.Account) ? "n/a" : split.Account)</td>
+                                                    <td>@(string.IsNullOrWhiteSpace(split.Account) ? "n/a" : split.AccountDisplay)</td>
                                                     <td>@(string.IsNullOrWhiteSpace(split.SubAccount) ? "n/a" : split.SubAccount)</td>
                                                     <td>@(string.IsNullOrWhiteSpace(split.Project) ? "n/a" : split.Project)</td>
                                                     <td>@split.Amount</td>
