--- a/Purchasing.Web/Views/Order/_ReviewLineSplits.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineSplits.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="acct-info">
                     <strong>Account:</strong> <span class="account">@split.AccountDisplay</span>
-                    <strong>SubAccount:</strong> <span class="subaccount">@split.SubAccount</span>
+                    <strong>SubAccount:</strong> <span class="subaccount">@Model.GetSubAccountDisplayForSplit(@split)</span>
                     <strong>Project:</strong> <span class="project">@split.Project</span>
                 </div>
             }
@@ -39,7 +39,7 @@
                         { 
                             <tr>
                                 <td>@split.AccountDisplay</td>
-                                <td>@split.SubAccount</td>
+                                <td>@Model.GetSubAccountDisplayForSplit(@split)</td>
                                 <td>@split.Project</td>
                                 <td>@split.Amount</td>
                             </tr>
