--- a/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
@@ -27,7 +27,15 @@
         @Html.ValidationMessageFor(model => model.Workgroup.Administrative)
     </div>
 </li>
-
+<li>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Workgroup.SharedOrCluster)
+    </div>
+    <div class="editor-field">
+        @Html.EditorFor(model => model.Workgroup.SharedOrCluster)
+        @Html.ValidationMessageFor(model => model.Workgroup.SharedOrCluster)
+    </div>
+</li>
 <li>
     <div class="editor-label">
         @Html.LabelFor(model => model.Workgroup.SyncAccounts)
